In machine_learning_template.ipynb > Data Preprocessing section: Add textbox for markdown documentation in all subsections from Feature Scaling and Encoding to Saving Data

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1389,19 +1389,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d61a03f6-0eca-405d-b01a-5ae61fb8d9ac",
+   "id": "db5d2469-461b-4f5a-a335-8004df91637f",
    "metadata": {},
    "source": [
     "## Feature Scaling and Encoding  \n",
-    "Use a `ColumnTransformer` to preprocess columns based on their semantic type. This allows the appropriate transformation to each semantic column type in a single step.  \n",
-    "\n",
-    "- Scale numerical columns:\n",
-    "    - `StandardScaler`: Scales features to have mean = 0 and standard deviation = 1.\n",
-    "    - `MinMaxScaler`: Scales features to a range between [0, 1].\n",
-    "- Encode categorical columns:\n",
-    "    - Nominal columns: `OneHotEncoder` to convert string categories into binary (one-hot) encoded columns; use for unordered categories (e.g., red, green, blue).\n",
-    "    - Ordinal columns: `OrdinalEncoder` to convert string categories into integers; use for ordered categories (e.g., low, medium, high).\n",
-    "- Retain boolean columns: Pass through boolean columns unchanged using `remainder=\"passthrough\"`."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Use a <code>ColumnTransformer</code> to preprocess columns based on their semantic type. This allows the appropriate transformation to each semantic column type in a single step.\n",
+    "    <ul>\n",
+    "        <li>Scale numerical columns:</li>\n",
+    "        <ul>\n",
+    "            <li><code>StandardScaler</code>: Scales features to have mean = 0 and standard deviation = 1.</li>\n",
+    "            <li><code>MinMaxScaler</code>: Scales features to a range between [0, 1].</li>\n",
+    "        </ul>\n",
+    "        <li>Encode categorical columns:</li>\n",
+    "        <ul>\n",
+    "            <li>Nominal columns: <code>OneHotEncoder</code> to convert string categories into binary (one-hot) encoded columns; use for unordered categories (e.g., red, green, blue).</li>\n",
+    "            <li>Ordinal columns: <code>OrdinalEncoder</code> to convert string categories into integers; use for ordered categories (e.g., low, medium, high).</li>\n",
+    "        </ul>\n",
+    "        <li>Retain boolean columns: Pass through boolean columns unchanged using <code>remainder=\"passthrough\"</code>.</li>\n",
+    "    </ul>\n",
+    "</div> "
    ]
   },
   {
@@ -1452,24 +1459,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1200d328-586f-4c0c-b50e-9046fa2d7c6b",
+   "id": "9627e76c-0934-4f6e-8059-fc3b25cbbe5b",
    "metadata": {},
    "source": [
-    "## Polynomial Features\n",
-    "Create polynomial features in combination with feature scaling and encoding. Use a `ColumnTransformer` to preprocess columns based on their semantic type. This allows the appropriate transformation to each semantic column type in a single step.  \n",
-    "\n",
-    "- Numerical columns:\n",
-    "    - `Pipeline` to create polynomial features followed by feature scaling.\n",
-    "    - `PolynomialFeatures` to create polynomial terms (e.g., squared terms and interaction terms).\n",
-    "    - Feature scaling:\n",
-    "        - `StandardScaler`: Scales features to have mean = 0 and standard deviation = 1.\n",
-    "        - `MinMaxScaler`: Scales features to a range between [0, 1].\n",
-    "- Categorical columns: \n",
-    "    - Nominal columns: `OneHotEncoder` to convert string categories into binary (one-hot) encoded columns; use for unordered categories (e.g., red, green, blue).\n",
-    "    - Ordinal columns: `OrdinalEncoder` to convert string categories into integers; use for ordered categories (e.g., low, medium, high).\n",
-    "- Boolean columns: Retain in their original form using `remainder=\"passthrough\"`.\n",
-    "\n",
-    "Note: Polynomial features are commonly used with models such as linear regression, logistic regression, and elastic net regression to capture non-linear relationships and interactions between features. Polynomial features are often combined with Elastic Net regularization (balancing the effects of both Lasso and Ridge regularization) to prevent overfitting."
+    "## Polynomial Features  \n",
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Create polynomial features in combination with feature scaling and encoding. Use a <code>ColumnTransformer</code> to preprocess columns based on their semantic type. This allows the appropriate transformation to each semantic column type in a single step. \n",
+    "    <ul>\n",
+    "        <li>Numerical columns:</li>\n",
+    "        <ul>\n",
+    "            <li><code>Pipeline</code> to create polynomial features followed by feature scaling.</li>\n",
+    "            <li><code>PolynomialFeatures</code> to create polynomial terms (e.g., squared terms and interaction terms).</li>\n",
+    "            <li>Feature scaling:</li>\n",
+    "            <ul>\n",
+    "                <li><code>StandardScaler</code>: Scales features to have mean = 0 and standard deviation = 1.</li>\n",
+    "                <li><code>MinMaxScaler</code>: Scales features to a range between [0, 1].</li>\n",
+    "            </ul>\n",
+    "        </ul>\n",
+    "        <li>Categorical columns:</li>\n",
+    "        <ul>\n",
+    "            <li>Nominal columns: <code>OneHotEncoder</code> to convert string categories into binary (one-hot) encoded columns; use for unordered categories (e.g., red, green, blue).</li>\n",
+    "            <li>Ordinal columns: <code>OrdinalEncoder</code> to convert string categories into integers; use for ordered categories (e.g., low, medium, high).</li>\n",
+    "        </ul>\n",
+    "        <li>Retain boolean columns: Pass through boolean columns unchanged using <code>remainder=\"passthrough\"</code>.</li>\n",
+    "    </ul>\n",
+    "    ℹ️ Polynomial features are commonly used with models such as linear regression, logistic regression, and elastic net regression to capture non-linear relationships and interactions between features. Polynomial features are often combined with Elastic Net regularization (balancing the effects of both Lasso and Ridge regularization) to prevent overfitting.\n",
+    "</div> "
    ]
   },
   {
@@ -1541,7 +1556,9 @@
    "metadata": {},
    "source": [
     "### CSV  \n",
-    "Save preprocessed data from a Pandas DataFrame to a `.csv` file in the `data` directory."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Save preprocessed data from a Pandas DataFrame to a <code>.csv</code> file in the <code>data</code> directory.\n",
+    "</div>"
    ]
   },
   {
@@ -1574,8 +1591,9 @@
    "metadata": {},
    "source": [
     "### MySQL  \n",
-    "Save preprocessed data from a Pandas DataFrame to a MySQL database table.  \n",
-    "Note: Make sure `sql_username` and `sql_password` were imported as environment variables."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Save preprocessed data from a Pandas DataFrame to a MySQL database table. Make sure <code>sql_username</code> and <code>sql_password</code> were imported as environment variables.\n",
+    "</div>"
    ]
   },
   {
