In machine_learning_template.ipynb > EDA section: Add textbox for markdown documentation throughout Univariate EDA section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1647,7 +1647,9 @@
    "metadata": {},
    "source": [
     "## Univariate EDA  \n",
-    "Analyze the distribution of a single column using descriptive statistics and visualizations."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Analyze the distribution of a single column using descriptive statistics and visualizations.\n",
+    "</div>"
    ]
   },
   {
@@ -1656,7 +1658,9 @@
    "metadata": {},
    "source": [
     "### Numerical Columns  \n",
-    "Examine descriptive statistics (e.g., mean, median, standard deviation, quartiles) and visualize the distributions (e.g., histogram) of numerical columns."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Examine descriptive statistics (e.g., mean, median, standard deviation, quartiles) and visualize the distributions (e.g., histogram) of numerical columns.\n",
+    "</div>"
    ]
   },
   {
@@ -1664,7 +1668,9 @@
    "id": "cfe81ae6-559e-432b-8cf2-8643b13ef6dd",
    "metadata": {},
    "source": [
-    "**Descriptive Statistics**"
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Descriptive Statistics</strong>\n",
+    "</div>"
    ]
   },
   {
@@ -1691,18 +1697,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b76c43e-ff1c-4477-8610-a103373b9383",
-   "metadata": {},
-   "source": [
-    "**Visualize Distributions** "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "dc6c4705-ccfa-4b08-9789-9c5319d71e52",
    "metadata": {},
    "source": [
-    "Histogram of single numerical column."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Visualize Distributions</strong> <br> \n",
+    "    📌 Histogram of single numerical column.\n",
+    "</div>"
    ]
   },
   {
@@ -1729,8 +1730,10 @@
    "id": "1357efeb-5ad1-4e15-875c-fce5e3a1b470",
    "metadata": {},
    "source": [
-    "Histogram matrix that shows the distribution of all numerical columns.  \n",
-    "Example code for 6 histograms in a 2x3 matrix."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Histogram matrix that shows the distribution of all numerical columns. <br>\n",
+    "    💡 Example code for 6 histograms in a 2x3 matrix.\n",
+    "</div>"
    ]
   },
   {
@@ -1769,15 +1772,9 @@
    "metadata": {},
    "source": [
     "### Categorical Columns  \n",
-    "Examine descriptive statistics (e.g., absolute and relative frequencies) and visualize the distributions (e.g., bar plot) of categorical columns."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "775bdb25-d466-48d1-bf2f-f2168e7bd774",
-   "metadata": {},
-   "source": [
-    "**Descriptive Statistics** "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Examine descriptive statistics (e.g., absolute and relative frequencies) and visualize the distributions (e.g., bar plot) of categorical columns.\n",
+    "</div>"
    ]
   },
   {
@@ -1785,7 +1782,10 @@
    "id": "d9b9fe5a-ecf0-4388-8a9d-88590fa48f89",
    "metadata": {},
    "source": [
-    "Frequencies of single categorical colum."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Descriptive Statistics</strong> <br> \n",
+    "    📌 Frequencies of single categorical colum.\n",
+    "</div>"
    ]
   },
   {
@@ -1808,7 +1808,9 @@
    "id": "ed16eb1b-646b-4d73-9ab9-de94304d7eed",
    "metadata": {},
    "source": [
-    "Frequencies of all categorical columns."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Frequencies of all categorical columns.\n",
+    "</div>"
    ]
   },
   {
@@ -1847,18 +1849,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7377699-74d6-49dc-a4dd-8434a4c42171",
-   "metadata": {},
-   "source": [
-    "**Visualize Distributions** "
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "b057fa22-fe17-4ea5-8558-cd8454ac77d6",
    "metadata": {},
    "source": [
-    "Bar plot of single categorical colum."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Visualize Distributions</strong> <br> \n",
+    "    📌 Bar plot of single categorical colum.\n",
+    "</div>"
    ]
   },
   {
@@ -1889,7 +1886,9 @@
    "id": "d54d534e-8310-404d-8b9e-16b606f32b1b",
    "metadata": {},
    "source": [
-    "Horizontal bar plot of single categorical colum. Useful for columns with high cardinality (i.e., a large number of unique categories)."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Horizontal bar plot of single categorical colum. Useful for columns with high cardinality (i.e., a large number of unique categories).\n",
+    "</div>"
    ]
   },
   {
@@ -1928,8 +1927,10 @@
    "id": "c1b9fb2d-babe-4c40-a375-d697bc98ee5f",
    "metadata": {},
    "source": [
-    "Bar plot matrix that shows frequencies of all categorical columns.  \n",
-    "Example code for 9 bar plots in a 3x3 matrix."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Bar plot matrix that shows frequencies of all categorical columns. <br>\n",
+    "    💡 Example code for 9 bar plots in a 3x3 matrix.\n",
+    "</div>"
    ]
   },
   {
