In machine_learning_template.ipynb > EDA section: Add textbox for markdown documentation throughout Bivariate EDA section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -1924,7 +1924,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1b9fb2d-babe-4c40-a375-d697bc98ee5f",
+   "id": "aa22066e-6ca5-46da-9bc7-78639fba32b4",
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
@@ -1975,7 +1975,9 @@
    "metadata": {},
    "source": [
     "## Bivariate EDA  \n",
-    "Analyze relationships between two columns using correlations and group-wise statistics and visualize relationships using scatter plots and bar plots."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Analyze relationships between two columns using correlations and group-wise statistics and visualize relationships using scatter plots and bar plots.\n",
+    "</div>"
    ]
   },
   {
@@ -1984,7 +1986,9 @@
    "metadata": {},
    "source": [
     "### Numerical x Numerical  \n",
-    "Analyze relationships between two numerical columns using correlation coefficients and visualize relationships using scatter plots. "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Analyze relationships between two numerical columns using correlation coefficients and visualize relationships using scatter plots. \n",
+    "</div>"
    ]
   },
   {
@@ -2000,7 +2004,9 @@
    "id": "74e55dda-a9f0-4d6c-a7f1-4ec6e2f5f047",
    "metadata": {},
    "source": [
-    "Correlation heatmap of all numerical and boolean columns. "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Correlation heatmap of all numerical and boolean columns. \n",
+    "</div>"
    ]
   },
   {
@@ -2055,7 +2061,9 @@
    "id": "6382adcc-1fdb-48b7-8f2a-6d27a559bbfc",
    "metadata": {},
    "source": [
-    "Feature-target correlations by order of magnitude."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Feature-target correlations by order of magnitude.\n",
+    "</div>"
    ]
   },
   {
@@ -2082,7 +2090,9 @@
    "id": "fc6d20c9-164e-4136-a7b5-fec7dd9a8ade",
    "metadata": {},
    "source": [
-    "Scatter plot between two numerical columns."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Scatter plot between two numerical columns.\n",
+    "</div>"
    ]
   },
   {
@@ -2112,8 +2122,10 @@
    "id": "4a6c0cc0-34f1-4f4c-b8d0-2243ce6f4e4d",
    "metadata": {},
    "source": [
-    "Scatter plot matrix that visualizes the relationships between all pairs of numerical columns.  \n",
-    "For example, 6 numerical columns would result in 15 scatter plots in a 5x3 matrix."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Scatter plot matrix that visualizes the relationships between all pairs of numerical columns. <br>\n",
+    "    💡 For example, 6 numerical columns would result in 15 scatter plots in a 5x3 matrix.\n",
+    "</div>"
    ]
   },
   {
@@ -2170,7 +2182,9 @@
    "metadata": {},
    "source": [
     "### Numerical x Categorical  \n",
-    "Analyze relationships between a numerical column and a categorical column using group-wise statistics (e.g., median or mean by category) and visualize relationships using bar plots."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Analyze relationships between a numerical column and a categorical column using group-wise statistics (e.g., median or mean by category) and visualize relationships using bar plots.\n",
+    "</div>"
    ]
   },
   {
@@ -2179,7 +2193,9 @@
    "metadata": {},
    "source": [
     "#### Group-Wise Statistics \n",
-    "Descriptive statistics of a single numerical column grouped by a single categorical column."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Descriptive statistics of a single numerical column grouped by a single categorical column.\n",
+    "</div>"
    ]
   },
   {
@@ -2199,7 +2215,9 @@
    "id": "3dd4d97c-92fb-4545-9d83-c95ad1181278",
    "metadata": {},
    "source": [
-    "Descriptive statistics of all numerical columns grouped by a single categorical column. Focus on median, mean, and std for easier readability."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Descriptive statistics of all numerical columns grouped by a single categorical column. Focus on median, mean, and std for easier readability.\n",
+    "</div>"
    ]
   },
   {
@@ -2218,7 +2236,9 @@
    "id": "271c168c-7350-4ea4-8248-593316e936e8",
    "metadata": {},
    "source": [
-    "Effect Size: Quantify the magnitude of the difference between two groups using Cohen's d."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Effect Size: Quantify the magnitude of the difference between two groups using Cohen's d.\n",
+    "</div>"
    ]
   },
   {
@@ -2264,7 +2284,9 @@
    "id": "f6acc3f3-f656-4dc9-a761-30d20d9d4425",
    "metadata": {},
    "source": [
-    "Bar plot of the median of a single numerical column grouped by a single categorical column."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Bar plot of the median of a single numerical column grouped by a single categorical column.\n",
+    "</div>"
    ]
   },
   {
@@ -2294,8 +2316,10 @@
    "id": "8284c210-2e79-4152-903d-71a2f4e98cfa",
    "metadata": {},
    "source": [
-    "Bar plot matrix that visualizes the relationships between all numerical columns and a single categorical column (e.g., the categorical target variable).  \n",
-    "Example code for 6 bar plots in a 2x3 matrix."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Bar plot matrix that visualizes the relationships between all numerical columns and a single categorical column (e.g., the categorical target variable). <br>\n",
+    "    💡 Example code for 6 bar plots in a 2x3 matrix.\n",
+    "</div>"
    ]
   },
   {
@@ -2333,8 +2357,10 @@
    "id": "23ec66e0-2f7f-49c4-847b-f7b696217640",
    "metadata": {},
    "source": [
-    "Bar plot matrix that visualizes the relationships of a single numerical column (e.g., the numerical target variable) and all categorical columns.  \n",
-    "Example code for 5 bar plots in a 2x3 matrix."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Bar plot matrix that visualizes the relationships of a single numerical column (e.g., the numerical target variable) and all categorical columns. <br>\n",
+    "    💡 Example code for 5 bar plots in a 2x3 matrix.\n",
+    "</div> "
    ]
   },
   {
@@ -2373,7 +2399,9 @@
    "metadata": {},
    "source": [
     "### Categorical x Categorical\n",
-    "Analyze relationships between two categorical columns using contingency tables and visualize relationships using grouped bar plots."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Analyze relationships between two categorical columns using contingency tables and visualize relationships using grouped bar plots.\n",
+    "</div>"
    ]
   },
   {
@@ -2389,7 +2417,9 @@
    "id": "0f022ac7-b8bb-42e5-b872-6904e8bc0936",
    "metadata": {},
    "source": [
-    "Contingency table between two categorical columns. "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Contingency table between two categorical columns. \n",
+    "</div>"
    ]
   },
   {
@@ -2431,7 +2461,9 @@
    "id": "227165f0-b70e-40a2-ad50-28e416423e8b",
    "metadata": {},
    "source": [
-    "Contingency tables between all pairs of categorical columns. "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Contingency tables between all pairs of categorical columns. \n",
+    "</div>"
    ]
   },
   {
@@ -2473,7 +2505,9 @@
    "id": "9bb55c9c-2812-4082-8bb0-d2d243c009b1",
    "metadata": {},
    "source": [
-    "Grouped bar plot between two categorical columns."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Grouped bar plot between two categorical columns. \n",
+    "</div>"
    ]
   },
   {
@@ -2497,8 +2531,10 @@
    "id": "0b0192da-1297-4ca3-8523-014a630298a5",
    "metadata": {},
    "source": [
-    "Grouped bar plot matrix that visualizes the relationships between all pairs of categorical columns.  \n",
-    "For example, 6 categorical columns would result in 15 grouped bar plots in a 5x3 matrix."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Grouped bar plot matrix that visualizes the relationships between all pairs of categorical columns. <br>\n",
+    "    💡 For example, 6 categorical columns would result in 15 grouped bar plots in a 5x3 matrix.\n",
+    "</div>"
    ]
   },
   {
