In machine_learning_template.ipynb > Modeling section: Add textbox for markdown documentation in Helper Function for Residual Plots section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2590,7 +2590,9 @@
    "metadata": {},
    "source": [
     "# Modeling (Regression Task)  \n",
-    "For a regression problem, where the goal is to predict a numerical target variable."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    ℹ️ For a regression problem, where the goal is to predict a numerical target variable.\n",
+    "</div>"
    ]
   },
   {
@@ -2599,7 +2601,9 @@
    "metadata": {},
    "source": [
     "## Helper Function for Residual Plots  \n",
-    "Creates two plots for predicted vs. actual target and residuals vs. actual target to evaluate model performance and identify potential issues in the model assumptions graphically."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    ℹ️ Creates two plots for predicted vs. actual target and residuals vs. actual target to evaluate model performance and identify potential issues in the model assumptions graphically.\n",
+    "</div>"
    ]
   },
   {
