--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -4177,7 +4177,9 @@
    "metadata": {},
    "source": [
     "# Modeling (Classification Task)  \n",
-    "For a classification problem, where the goal is to predict a categorical target variable."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    ℹ️ For a classification problem, where the goal is to predict a categorical target variable.\n",
+    "</div>"
    ]
   },
   {
@@ -5251,8 +5253,10 @@
    "id": "de726cf0-d814-4a59-ac1f-db2058737fe5",
    "metadata": {},
    "source": [
-    "**Metrics: Classification Report**   \n",
-    "Evaluate model performance using metrics (accuracy, precision, recall, F1-score) with a classification report for training, validation, and test data."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Metrics: Classification Report</strong> <br> \n",
+    "    📌 Evaluate model performance using metrics (accuracy, precision, recall, F1-score) with a classification report for training, validation, and test data.\n",
+    "</div>"
    ]
   },
   {
@@ -5281,8 +5285,10 @@
    "id": "723146ed-7699-4f95-a78d-5989c143e93d",
    "metadata": {},
    "source": [
-    "**Error Analysis: Confusion Matrix**  \n",
-    "Show misclassifications using a confusion matrix for training, validation, and test data."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Error Analysis: Confusion Matrix</strong> <br> \n",
+    "    📌 Show misclassifications using a confusion matrix for training, validation, and test data.\n",
+    "</div>"
    ]
   },
   {
@@ -5320,8 +5326,10 @@
    "id": "03346c9a-c921-4953-a378-2b9c58aa02e8",
    "metadata": {},
    "source": [
-    "**Error Analysis: Features Relationships with Misclassifications**  \n",
-    "Explore relationships between the features and misclassifications through correlations and scatterplots on the test data."
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    <strong>Error Analysis: Features Relationships with Misclassifications</strong> <br> \n",
+    "    📌 Explore relationships between the features and misclassifications through correlations and scatterplots on the test data.\n",
+    "</div>"
    ]
   },
   {
