In machine_learning_template.ipynb > Modeling > Final Model > Feature Importance section: Add textbox for markdown documentation

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -5407,7 +5407,9 @@
    "id": "111b5614-426b-4f8d-a57e-7a6e6a3f6e66",
    "metadata": {},
    "source": [
-    "Feature Importance Plot: Logistic Regression or Elastic Net Logistic Regression "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Feature Importance Plot: Logistic Regression or Elastic Net Logistic Regression \n",
+    "</div>"
    ]
   },
   {
@@ -5448,7 +5450,9 @@
    "id": "361e810d-595c-42bb-a0d6-29284c45feaa",
    "metadata": {},
    "source": [
-    "Feature Importance Plot: Decision Tree or Random Forest "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Feature Importance Plot: Decision Tree or Random Forest  \n",
+    "</div>"
    ]
   },
   {
@@ -5489,7 +5493,9 @@
    "id": "65833257-d9e7-4162-99aa-135fadddf6d8",
    "metadata": {},
    "source": [
-    "Feature Importance Plot: XGBoost "
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Feature Importance Plot: XGBoost \n",
+    "</div>"
    ]
   },
   {
