In machine_learning_template.ipynb > Data Preprocessing section: Update markdown documentation comments throughout the section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -807,7 +807,7 @@
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Target Encoding</strong> <br>\n",
-    "    📌 Derive numerical feature from categorical text column by encoding categories based on the mean of the target variable. This method is especially useful for categorical columns with high cardinality (i.e., a large number of unique categories).\n",
+    "    📌 Derive a numerical feature from a categorical text column by encoding categories based on the mean of the target variable. This method is especially useful for categorical columns with high cardinality (i.e., a large number of unique categories).\n",
     "</div>"
    ]
   },
@@ -838,7 +838,7 @@
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Tiering</strong> <br>\n",
-    "    📌 Group categories into predefined tiers based on domain-specific factors that are relevant for predicting the target variable, using subject matter expertise. This method is useful for improving predictive performance and handling categorical columns with high cardinality (i.e., a large number of unique categories). <br><br>\n",
+    "    📌 Group categories into predefined tiers based on domain-specific factors that are relevant for predicting the target variable using subject matter expertise. This method is useful for improving predictive performance and handling categorical columns with high cardinality (i.e., a large number of unique categories). <br><br>\n",
     "\n",
     "💡 Example: Categorize 300+ cities into 3 tiers based on factors such as employment opportunities, cost of living, and population density.\n",
     "</div>"
@@ -968,7 +968,8 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    <strong>Identification</strong>\n",
+    "    <strong>Identification</strong> <br>\n",
+    "    📌 Identify missing values.\n",
     "</div>"
    ]
   },
@@ -979,7 +980,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Identify missing values\n",
+    "# Identify missing values in training, validation, and test data\n",
     "print(\"Training Data - Features:\")\n",
     "print(X_train.isnull().sum())\n",
     "print(\"\\nTraining Data - Target Variable:\")\n",
@@ -1003,6 +1004,16 @@
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Imputation</strong> <br>\n",
+    "    📌 Impute missing values in numerical and categorical columns.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87ac79da-4639-4823-9f9f-827cb7b7a1d5",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    📌 Impute missing values in a numerical column using the median. \n",
     "</div>"
    ]
@@ -1078,7 +1089,17 @@
    "source": [
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
     "    <strong>Deletion</strong> <br>\n",
-    "    📌 Delete rows with missing values on any column or a subset of columns.\n",
+    "    📌 Delete rows with missing values.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97c2b2cb-2c80-4d1f-b048-4db6de0a7720",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Delete rows with missing values on any column.\n",
     "</div>"
    ]
   },
@@ -1093,6 +1114,16 @@
     "X_train.dropna(inplace=True)\n",
     "X_val.dropna(inplace=True)\n",
     "X_test.dropna(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9a23ff0-21b6-499c-b635-23da154564a5",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
+    "    📌 Delete rows with missing values on specific columns.\n",
+    "</div>"
    ]
   },
   {
@@ -1592,7 +1623,8 @@
    "source": [
     "### MySQL  \n",
     "<div style=\"background-color:#fff6e4; padding:15px; border:3px solid #f5ecda; border-radius:6px;\">\n",
-    "    📌 Save preprocessed data from a Pandas DataFrame to a MySQL database table. Make sure <code>sql_username</code> and <code>sql_password</code> were imported as environment variables.\n",
+    "    📌 Save preprocessed data from a Pandas DataFrame to a MySQL database table. <br><br>\n",
+    "    🔒 Make sure <code>sql_username</code> and <code>sql_password</code> were imported as environment variables.\n",
     "</div>"
    ]
   },
